# AiogramDetaBot

./: .gitignore  LICENSE  README.md  Spacefile  main.py  requirements.txt
BotMicro/: .gitignore  main.py  pyproject.toml  requirements.txt
BotMicro/bot/: factory.py
BotMicro/bot/handlers/: __init__.py  error.py  start.py
BotMicro/bot/middlewares/: __init__.py  callback_message.py  logging.py
BotMicro/utils/: env_parse.py  logging.py
BotMicro/web/: factory.py  stubs.py
BotMicro/web/routers/: __init__.py  info.py  webhook.py
bot/: factory.py  routing.py
bot/handlers/: __init__.py
